--- a/styleLogin.css
+++ b/styleLogin.css
@@ -23,7 +23,7 @@ html {
     height: 50px;
     }
       .titulo{
-        color:#031026;
+        color:#a1a1a1;
         font-size:25px;
         padding: 0;
         margin: 0;
