--- a/styleLogin.css
+++ b/styleLogin.css
@@ -60,7 +60,8 @@ html {
           margin: 0;
           margin-bottom: 14px;
         }
-        .nome-usuario{
+        #inputNome{
+          font-family: 'Outfit', sans-serif;
           margin: 0;
           width: 450px;
           height: 50px;
@@ -80,8 +81,8 @@ html {
           margin-bottom:14px;
           margin-top: 14px;
         }
-        .senha-usuario{
-          
+        #inputSenha{
+          font-family: 'Outfit', sans-serif;
           width: 450px;
           height: 50px;
           padding: 0;
